--- a/.github/workflows/bs_meta_browser_build_and_test.yml
+++ b/.github/workflows/bs_meta_browser_build_and_test.yml
@@ -76,7 +76,10 @@ jobs:
           sudo apt-get install -y gawk wget git-core diffstat unzip texinfo gcc-multilib \
             build-essential chrpath socat cpio python3 python3-pip python3-pexpect \
             xz-utils debianutils iputils-ping python3-git python3-jinja2 libegl1-mesa \
-            libsdl1.2-dev pylint3 xterm python3-subunit mesa-common-dev zstd liblz4-tool
+            libsdl1.2-dev pylint xterm python3-subunit mesa-common-dev zstd liblz4-tool
+          locale --all-locales | grep en_US.utf8 || true
+          echo "en_US.UTF-8 UTF-8" | sudo tee -a /etc/locale.gen
+          sudo locale-gen
 
       # Mount EFS file systems
       - name: Mount EFS file systems
