--- a/.github/workflows/bs_meta_browser_build_and_test.yml
+++ b/.github/workflows/bs_meta_browser_build_and_test.yml
@@ -3,7 +3,31 @@ on:
   workflow_call:
     inputs:
       runner_name:
-        description: 'Runner name'
+        de          # Mount shared cache EFS (sstate, downloads) with retries
+          SHARED_CACHE_MOUNTED=false
+          for i in {1..3}; do
+            echo "Attempt $i: Mounting shared cache EFS..."
+            if sudo mount -t nfs4 -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,intr,timeo=600 
+              ${{ env.SHARED_CACHE_EFS_ID }}.efs.${{ env.AWS_REGION }}.amazonaws.com:/ /mnt/shared-cache; then
+              echo "Shared cache EFS mounted successfully"
+              SHARED_CACHE_MOUNTED=true
+              break
+            fi
+            echo "Mount attempt $i failed, trying with IP address..."
+            # Get mount target IP for this subnet
+            MOUNT_TARGET_IP=$(aws efs describe-mount-targets --file-system-id ${{ env.SHARED_CACHE_EFS_ID }} --region ${{ env.AWS_REGION }} --query 'MountTargets[?SubnetId==`${{ env.VPC_SUBNET_ID }}`].IpAddress' --output text)
+            if [ -n "$MOUNT_TARGET_IP" ] && [ "$MOUNT_TARGET_IP" != "None" ]; then
+              echo "Trying to mount using IP address: $MOUNT_TARGET_IP"
+              if sudo mount -t nfs4 -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,intr,timeo=600 
+                $MOUNT_TARGET_IP:/ /mnt/shared-cache; then
+                echo "Shared cache EFS mounted successfully using IP"
+                SHARED_CACHE_MOUNTED=true
+                break
+              fi
+            fi
+            echo "Mount attempt $i failed, retrying in 10 seconds..."
+            sleep 10
+          doneRunner name'
         required: true
         type: string
 
@@ -119,56 +143,91 @@ jobs:
           curl -s --connect-timeout 10 https://s3.amazonaws.com && echo "S3 reachable" || echo "S3 not reachable"
           
           # Alternative: Use mount target IP if DNS fails
-          echo "=== Alternative EFS Mount Strategy ==="
-          # Try to resolve mount target IPs through AWS CLI if available
+          echo "=== EFS Mount Strategy ==="
+          # Get mount target IPs through AWS CLI
           if command -v aws &> /dev/null; then
-            echo "Attempting to get EFS mount targets..."
-            aws efs describe-mount-targets --file-system-id ${{ env.SHARED_CACHE_EFS_ID }} --region ${{ env.AWS_REGION }} || echo "AWS CLI describe failed"
+            echo "Getting EFS mount targets..."
+            SHARED_CACHE_IP=$(aws efs describe-mount-targets --file-system-id ${{ env.SHARED_CACHE_EFS_ID }} --region ${{ env.AWS_REGION }} --query 'MountTargets[0].IpAddress' --output text 2>/dev/null || echo "")
+            GIT_MIRROR_IP=$(aws efs describe-mount-targets --file-system-id ${{ env.GIT_MIRROR_EFS_ID }} --region ${{ env.AWS_REGION }} --query 'MountTargets[0].IpAddress' --output text 2>/dev/null || echo "")
+            echo "Shared cache EFS IP: $SHARED_CACHE_IP"
+            echo "Git mirror EFS IP: $GIT_MIRROR_IP"
           fi
           
-          # Try using regional EFS mount target instead
-          echo "=== Trying regional EFS mount ==="
+          echo "=== Mounting EFS file systems ==="
           echo "Shared cache EFS: ${{ env.SHARED_CACHE_EFS_ID }}"
           echo "Git mirror EFS: ${{ env.GIT_MIRROR_EFS_ID }}"
           echo "AWS Region: ${{ env.AWS_REGION }}"
           
-          # Mount shared cache EFS (sstate, downloads) with retries
-          for i in {1..3}; do
+          # Mount shared cache EFS (sstate, downloads) with DNS and IP fallback
+          SHARED_MOUNTED=false
+          for i in {1..2}; do
             echo "Attempt $i: Mounting shared cache EFS..."
+            # Try DNS first
             if sudo mount -t nfs4 -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,intr,timeo=600 \
-              ${{ env.SHARED_CACHE_EFS_ID }}.efs.${{ env.AWS_REGION }}.amazonaws.com:/ /mnt/shared-cache; then
-              echo "Shared cache EFS mounted successfully"
+              ${{ env.SHARED_CACHE_EFS_ID }}.efs.${{ env.AWS_REGION }}.amazonaws.com:/ /mnt/shared-cache 2>/dev/null; then
+              echo "✓ Shared cache EFS mounted successfully via DNS"
+              SHARED_MOUNTED=true
               break
-            else
-              echo "Mount attempt $i failed, retrying in 10 seconds..."
-              sleep 10
+            elif [ -n "$SHARED_CACHE_IP" ]; then
+              echo "DNS failed, trying IP address: $SHARED_CACHE_IP"
+              if sudo mount -t nfs4 -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,intr,timeo=600 \
+                $SHARED_CACHE_IP:/ /mnt/shared-cache; then
+                echo "✓ Shared cache EFS mounted successfully via IP"
+                SHARED_MOUNTED=true
+                break
+              fi
             fi
+            echo "✗ Mount attempt $i failed, retrying..."
+            sleep 5
           done
           
-          # Mount git mirror EFS with retries
-          for i in {1..3}; do
+          # Mount git mirror EFS with DNS and IP fallback
+          GIT_MOUNTED=false
+          for i in {1..2}; do
             echo "Attempt $i: Mounting git mirror EFS..."
+            # Try DNS first
             if sudo mount -t nfs4 -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,intr,timeo=600 \
-              ${{ env.GIT_MIRROR_EFS_ID }}.efs.${{ env.AWS_REGION }}.amazonaws.com:/ /mnt/git-mirror; then
-              echo "Git mirror EFS mounted successfully"
+              ${{ env.GIT_MIRROR_EFS_ID }}.efs.${{ env.AWS_REGION }}.amazonaws.com:/ /mnt/git-mirror 2>/dev/null; then
+              echo "✓ Git mirror EFS mounted successfully via DNS"
+              GIT_MOUNTED=true
               break
-            else
-              echo "Mount attempt $i failed, retrying in 10 seconds..."
-              sleep 10
+            elif [ -n "$GIT_MIRROR_IP" ]; then
+              echo "DNS failed, trying IP address: $GIT_MIRROR_IP"
+              if sudo mount -t nfs4 -o nfsvers=4.1,rsize=1048576,wsize=1048576,hard,intr,timeo=600 \
+                $GIT_MIRROR_IP:/ /mnt/git-mirror; then
+                echo "✓ Git mirror EFS mounted successfully via IP"
+                GIT_MOUNTED=true
+                break
+              fi
             fi
+            echo "✗ Mount attempt $i failed, retrying..."
+            sleep 5
           done
+          
+          # Report mount results
+          if [ "$SHARED_MOUNTED" = "false" ]; then
+            echo "⚠️  WARNING: Failed to mount shared cache EFS - builds will be slower without cache"
+          fi
+          if [ "$GIT_MOUNTED" = "false" ]; then
+            echo "⚠️  WARNING: Failed to mount git mirror EFS - will clone repositories directly"
+          fi
+          
+          if [ "$SHARED_MOUNTED" = "true" ] && [ "$GIT_MOUNTED" = "true" ]; then
+            echo "🎉 All EFS file systems mounted successfully!"
+          fi
           
           # Verify mounts
           echo "=== Mount Verification ==="
-          mount | grep efs || echo "No EFS mounts found"
-          df -h | grep mnt || echo "No mnt filesystems found"
+          mount | grep mnt || echo "No /mnt filesystems found"
+          df -h | grep mnt || echo "No /mnt filesystems in df"
           
-          # Create cache directories if they don't exist
+          # Create cache directories even if mounts failed (for graceful degradation)
           sudo mkdir -p /mnt/shared-cache/sstate-cache
           sudo mkdir -p /mnt/shared-cache/downloads
+          sudo mkdir -p /mnt/git-mirror
           
           # Set permissions
-          sudo chown -R ubuntu:ubuntu /mnt/shared-cache /mnt/git-mirror
+          sudo chown -R ubuntu:ubuntu /mnt/shared-cache /mnt/git-mirror || true
 
       # Set up build directories with EFS mounts
       - name: Setup build environment
